--- a/lib/android/app/src/main/AndroidManifest.xml
+++ b/lib/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <!-- A proxy-service that gives the library an opportunity to do some work before launching/resuming the actual application task. -->
     <service android:name=".core.ProxyService"/>
 
-    <service android:name=".fcm.FcmInstanceIdListenerService">
+    <service android:name=".fcm.FcmInstanceIdListenerService" android:exported="false" >
       <intent-filter>
         <action android:name="com.google.firebase.MESSAGING_EVENT" />
         <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
